# multi-atoms

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: force_server_poc.py  measure_duty_cycle.py
src/multiatoms/: __init__.py  ase_md.py  core.py  model_manager.py  poly_atoms.py  polyatoms.py  proxy_calculator.py  scheduler.py
tests/: __init__.py  test_ase_md.py  test_integration.py  test_model_manager.py  test_poly_atoms.py  test_scheduler.py
