[project]
name = "multiatoms"
version = "0.1.0"
description = "Parallel, GPU-batched molecular dynamics on top of ASE Atoms"
requires-python = ">=3.10"
authors = [{ name = "Paul Link", email = "cq3730@partner.kit.edu" }]
dependencies = [
    "ase",
    "numpy",
    "greenlet",
    "torch",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
