[project]
name = "multiatoms"
version = "0.1.0"
description = "Parallel, GPU-batched molecular dynamics on top of ASE Atoms"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Paul Link", email = "cq3730@partner.kit.edu" }]
dependencies = [
    "ase",
    "numpy",
    "greenlet",
    "torch",
]

[project.optional-dependencies]
test = ["pytest"]
# Note: the benchmark's deps (torch-geometric + torch_cluster) intentionally live
# only in pixi.toml's [feature.bench]. The benchmark is a dev tool under
# benchmarks/, which is outside `src/` and so never shipped in the wheel -- a
# pyproject extra here would advertise a dependency for code nobody can import.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
